iac/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-secure
  namespace: default
  labels:
    app: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      # FIX: CKV_K8S_38
      automountServiceAccountToken: false
      # FIX: CKV_K8S_31
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 10001 # FIX: CKV_K8S_40
        runAsGroup: 10001
        fsGroup: 10001
        runAsNonRoot: true
      containers:
      - name: myapp
        # FIX: CKV_K8S_15
        image: myapp:local
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        # FIX: CKV_K8S_8
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 30
        # FIX: CKV_K8S_9
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "200m"
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
        volumeMounts:
        - name: tmp-volume
          mountPath: /tmp
      volumes:
      - name: tmp-volume
        emptyDir: {}
